--- a/public/en/index.html
+++ b/public/en/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>http://localhost:1313/</title>
-    <link rel="canonical" href="http://localhost:1313/">
-    <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=http://localhost:1313/">
-  </head>
-</html>
+<!doctype html><html lang=en><head><title>https://tan-furukawa.github.io/niconavi/</title><link rel=canonical href=https://tan-furukawa.github.io/niconavi/><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://tan-furukawa.github.io/niconavi/"></head></html>
