--- a/public/en/index.html
+++ b/public/en/index.html
@@ -1,1 +1,9 @@
-<!doctype html><html lang=en><head><title>https://tan-furukawa.github.io/niconavi/</title><link rel=canonical href=https://tan-furukawa.github.io/niconavi/><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://tan-furukawa.github.io/niconavi/"></head></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>https://tan-furukawa.github.io/niconavi/</title>
+    <link rel="canonical" href="https://tan-furukawa.github.io/niconavi/">
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://tan-furukawa.github.io/niconavi/">
+  </head>
+</html>
