--- a/public/ja/acquisition/index.html
+++ b/public/ja/acquisition/index.html
@@ -284,10 +284,13 @@
   </a>
 </h2>
 <p>傾けた薄片と水平な薄片を比較し、石英の方位を定量化する手順です。ユニバーサルステージがない環境でも再現できるよう、簡易的な傾斜機構の作り方から説明します。傾斜角はおおよそ 10° を目安にしていますが、厳密である必要はありません。</p>
-
-<div class="notice notice-warning"><p>薄片の微妙な色調の変化を定量化してc軸方位を決定します。これらの結果は、顕微鏡の光源・撮影素子の特性・薄片の状態等の複合的な要因で誤判定を引き起こす場合があります。とくに、カメラのホワイトバランスの設定はレタデーションの判断に大きな影響を与える可能性があります。0-300のレタデーションの色は、本来灰色から薄い黄色を示しますが、顕微鏡によっては赤みや青みがでる場合があります。下記のレタデーションチャートを参考に、低いレタデーションを基準にホワイトバランス設定を行うことを勧めます。</p>
+<div class="notice warning">
+  <div class="notice-title">
+    <i class="fa-solid fa-exclamation-triangle" aria-hidden="true"></i>Warning
+  </div>
+  <div class="notice-content"><p>薄片の微妙な色調の変化を定量化してc軸方位を決定します。これらの結果は、顕微鏡の光源・撮影素子の特性・薄片の状態等の複合的な要因で誤判定を引き起こす場合があります。とくに、カメラのホワイトバランスの設定はレタデーションの判断に大きな影響を与える可能性があります。0-300のレタデーションの色は、本来灰色から薄い黄色を示しますが、顕微鏡によっては赤みや青みがでる場合があります。下記のレタデーションチャートを参考に、低いレタデーションを基準にホワイトバランス設定を行うことを勧めます。</p>
 <img src="/images/page/acquisition/pic12.png" style="width: 100%;">
-<p>また、必ず、EBSD等を使用した方位が既知のいくつかのサンプルと結果の比較をおこない、推定結果に差がないことを確認してください。また、そのときの撮影条件や光源の条件を記録し、再現性を担保してください。</p>
+<p>また、必ず、EBSD等を使用した方位が既知のいくつかのサンプルと結果の比較をおこない、推定結果に差がないことを確認してください。また、そのときの撮影条件や光源の条件を記録し、再現性を担保してください。</p></div>
 </div>
 
 <h3 id="2-1-傾斜機構の作成">
@@ -311,9 +314,13 @@
 <li>
 <p>板の端に細く切った両面テープを貼り、剥離紙をはがします。</p>
 <img src="/images/page/acquisition/pic4.svg" style="width: 70%;">
-
-<div class="notice notice-example">筆者は新品の薄片を三枚重ねてテープで固定し、その上に細い両面テープを貼ることで支点の高さと粘着力を安定させています。同じ工夫を取り入れると薄片がずれにくくなります。
+<div class="notice example">
+  <div class="notice-title">
+    <i class="fa-solid fa-file-text" aria-hidden="true"></i>Example
+  </div>
+  <div class="notice-content">筆者は新品の薄片を三枚重ねてテープで固定し、その上に細い両面テープを貼ることで支点の高さと粘着力を安定させています。同じ工夫を取り入れると薄片がずれにくくなります。
 <img src="/images/page/acquisition/pic5.jpg" style="width: 70%;"></div>
+</div>
 
 </li>
 <li>
@@ -321,12 +328,15 @@
 <img src="/images/page/acquisition/pic7.svg" style="width: 70%;">
 </li>
 </ol>
-
-<div class="notice notice-example"><p>顕微鏡ステージ上で薄片を傾けた様子。おもりで角度を固定します。筆者は六角レンチを重しとして利用しました。</p>
+<div class="notice example">
+  <div class="notice-title">
+    <i class="fa-solid fa-file-text" aria-hidden="true"></i>Example
+  </div>
+  <div class="notice-content"><p>顕微鏡ステージ上で薄片を傾けた様子。おもりで角度を固定します。筆者は六角レンチを重しとして利用しました。</p>
    <img src="/images/page/acquisition/pic10.jpg" style="width: 70%;">
 <p>図：傾けた状態</p>
    <img src="/images/page/acquisition/pic11.jpg" style="width: 70%;">
-<p>図：おもり（六角レンチ）を載せて水平にした状態</p>
+<p>図：おもり（六角レンチ）を載せて水平にした状態</p></div>
 </div>
 
 <h3 id="2-2-撮影手順">
@@ -351,8 +361,12 @@
 <li>ステージを 0° に合わせ、薄片を 0°–180° 線に平行に置きます。</li>
 <li>薄片を傾け、モニター上で<strong>薄片の左端</strong>にピントが合う状態にします。</li>
 </ol>
-
-<div class="notice notice-warning">偏光顕微鏡では像が左右反転して見えるため、実際には薄片の右端にピントが合っています。</div>
+<div class="notice warning">
+  <div class="notice-title">
+    <i class="fa-solid fa-exclamation-triangle" aria-hidden="true"></i>Warning
+  </div>
+  <div class="notice-content">偏光顕微鏡では像が左右反転して見えるため、実際には薄片の右端にピントが合っています。</div>
+</div>
 
 <ol start="4">
 <li>動画撮影を開始し、ステージと接眼レンズが離れる方向へ約 10 秒かけてピントを動かします。モニター上で薄片の右端にピントが合ったら停止します（上図 a）。</li>
@@ -370,8 +384,12 @@
 <ol>
 <li>ステージを 45° に回転させ、モニター上で薄片の左下端にピントを合わせます。</li>
 </ol>
-
-<div class="notice notice-warning">偏光顕微鏡では像が反転して見えるため、実際には薄片の右上端にピントが合っています。</div>
+<div class="notice warning">
+  <div class="notice-title">
+    <i class="fa-solid fa-exclamation-triangle" aria-hidden="true"></i>Warning
+  </div>
+  <div class="notice-content">偏光顕微鏡では像が反転して見えるため、実際には薄片の右上端にピントが合っています。</div>
+</div>
 
 <ol start="2">
 <li>動画撮影を開始し、動画1と同様に接眼レンズから離れる方向へ約 10 秒かけてピントを移動させ、薄片の右上端にピントが合ったら停止します（上図 b）。</li>
@@ -390,8 +408,12 @@
 <li>おもりを載せて動かして薄片を水平にし、ピントを合わせます（上図 c）。</li>
 <li>動画撮影を開始し、すぐに停止します。1 秒程度の短い動画で十分です。</li>
 </ol>
-
-<div class="notice notice-note"><code>extinction color</code> の比較用データです。傾斜した動画との対応が取れれば問題ありません。</div>
+<div class="notice note">
+  <div class="notice-title">
+    <i class="fa-solid fa-sticky-note" aria-hidden="true"></i>Note
+  </div>
+  <div class="notice-content"><code>extinction color</code> の比較用データです。傾斜した動画との対応が取れれば問題ありません。</div>
+</div>
 
 <video controls width="70%">
     <source src="/images/page/acquisition/pic9-45deg-not-tilt.mp4" type="video/mp4">
