--- a/public/tutorial/tutorial2/index.html
+++ b/public/tutorial/tutorial2/index.html
@@ -444,8 +444,12 @@ Figure: Centre after manual adjustment.
 <ol start="3">
 <li>Use the top menu <code>Save as PDF</code> to export the view if required.</li>
 </ol>
-
-<div class="notice notice-info">This approach also emphasises undulose extinction in single crystals.</div>
+<div class="notice info">
+  <div class="notice-title">
+    <i class="fa-solid fa-exclamation-circle" aria-hidden="true"></i>Info
+  </div>
+  <div class="notice-content">This approach also emphasises undulose extinction in single crystals.</div>
+</div>
 
 <h2 id="4-wrap-up">
   4. Wrap-Up
