fix URL problem

--- a/public/tutorial/tutorial3/index.html
+++ b/public/tutorial/tutorial3/index.html
@@ -296,7 +296,7 @@ NicolNavi&rsquo;s CPO workflow consumes five videos. Refer to the Data Acquisiti
   <div class="notice-content">Entering values above 300 nm increases the risk of failing to resolve c-axis inclinations. Keep the value at or below 300 nm when you intend to calculate orientations, and prepare thin sections so that quartz retardation stays within that range.</div>
 </div>
 
-<img src="/images/page/tutorial/tutorial3/pic1.png" style="width: 30%;">
+<p>&lt;img src=&quot;{{ &ldquo;/images/page/tutorial/tutorial3/pic1.png&rdquo; | relURL }}&quot; style=&ldquo;width: 30%;&quot;&gt;</p>
 <h3 id="42-preprocess-and-check-the-rotation-centre">
   4.2 Preprocess and Check the Rotation Centre
   <a class="heading-link" href="#42-preprocess-and-check-the-rotation-centre">
@@ -320,7 +320,7 @@ NicolNavi&rsquo;s CPO workflow consumes five videos. Refer to the Data Acquisiti
 <li>Increase the <code>median filter</code> slider by one step and adjust the other sensitivity controls as shown below.</li>
 <li>Click <code>Calculate grain boundaries</code> to update the mask. Once satisfied, choose <code>Continue</code> to enter the labelling stage.</li>
 </ol>
-<img src="/images/page/tutorial/tutorial3/pic2.png" style="width: 30%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic2.png&rdquo; | relURL }}&quot; style=&ldquo;width: 30%;&quot;&gt;</p>
 <h3 id="44-assign-labels">
   4.4 Assign Labels
   <a class="heading-link" href="#44-assign-labels">
@@ -333,7 +333,7 @@ NicolNavi&rsquo;s CPO workflow consumes five videos. Refer to the Data Acquisiti
 <li>Select each label in turn and click the corresponding grains on the left panel. In this example 17 grains were labelled, but the required number varies by dataset.</li>
 <li>Expand the training set if misclassifications remain. When the preview stabilises, click <code>Done</code>.</li>
 </ol>
-<img src="/images/page/tutorial/tutorial3/pic3.png" style="width: 100%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic3.png&rdquo; | relURL }}&quot; style=&ldquo;width: 100%;&quot;&gt;</p>
 <h3 id="45-run-cpo-analysis">
   4.5 Run CPO Analysis
   <a class="heading-link" href="#45-run-cpo-analysis">
@@ -372,7 +372,7 @@ NicolNavi&rsquo;s CPO workflow consumes five videos. Refer to the Data Acquisiti
   <div class="notice-content">The <code>max R</code> value is used to recompute retardation and derive c-axis inclinations during CPO analysis.</div>
 </div>
 
-<img src="/images/page/tutorial/tutorial3/pic4.png" style="width: 30%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic4.png&rdquo; | relURL }}&quot; style=&ldquo;width: 30%;&quot;&gt;</p>
 <div class="notice warning">
   <div class="notice-title">
     <i class="fa-solid fa-exclamation-triangle" aria-hidden="true"></i>Warning
@@ -397,7 +397,7 @@ NicolNavi&rsquo;s CPO workflow consumes five videos. Refer to the Data Acquisiti
   <div class="notice-content">COI maps typically contain blank regions because tilting shifts the field of view, creating pixels without valid references.</div>
 </div>
 
-<img src="/images/page/tutorial/tutorial3/pic5.png" style="width: 100%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic5.png&rdquo; | relURL }}&quot; style=&ldquo;width: 100%;&quot;&gt;</p>
 <h3 id="47-plot-pole-figures">
   4.7 Plot Pole Figures
   <a class="heading-link" href="#47-plot-pole-figures">
@@ -409,15 +409,15 @@ NicolNavi&rsquo;s CPO workflow consumes five videos. Refer to the Data Acquisiti
 <li>Return to <code>analysis</code>, deselect <code>single crystal quartz</code>, and leave <code>vein quartz</code> checked to focus on the vein.</li>
 <li>Switch the view to <code>polar plot</code> and keep <code>φ = 0–360°</code> selected. Each grain is plotted as a single point in the pole figure.</li>
 </ol>
-<img src="/images/page/tutorial/tutorial3/pic6.png" style="width: 100%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic6.png&rdquo; | relURL }}&quot; style=&ldquo;width: 100%;&quot;&gt;</p>
 <ol start="3">
 <li>Enable <code>Plot for each pixel</code> to draw orientations at pixel resolution. Use this to assess intra-grain dispersion.</li>
 </ol>
-<img src="/images/page/tutorial/tutorial3/pic7.png" style="width: 100%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic7.png&rdquo; | relURL }}&quot; style=&ldquo;width: 100%;&quot;&gt;</p>
 <ol start="4">
 <li>Tick <code>display points</code> to overlay the sampled orientation data. NicolNavi adds 0.5% noise by default to prevent overlapping points; adjust <code>Point noise</code> if required.</li>
 </ol>
-<img src="/images/page/tutorial/tutorial3/pic8.png" style="width: 100%;">
+<p>&lt;img src=&rdquo;{{ &ldquo;/images/page/tutorial/tutorial3/pic8.png&rdquo; | relURL }}&quot; style=&ldquo;width: 100%;&quot;&gt;</p>
 <h2 id="5-wrap-up">
   5. Wrap-Up
   <a class="heading-link" href="#5-wrap-up">
